feat: 登陆注册模块开发，待联调

--- a/medical_systems_client/src/view/PatientHome/index.scss
+++ b/medical_systems_client/src/view/PatientHome/index.scss
@@ -46,10 +46,6 @@
           width: 100%;
         }
       }
-
-      &-info {
-
-      }
     }
 
     &-docter {
@@ -90,3 +86,16 @@
     }
   }
 }
+
+
+.PatientHomeTransition-enter, .PatientHomeTransition-appear {
+  opacity: 0;
+  transform: scale(0.9) translateY(50%);
+}
+.PatientHomeTransition-enter-active, .PatientHomeTransition-appear-active {
+  opacity: 1;
+  transform: scale(1) translateY(0%);
+  transition: all 1000ms ease-out;
+}
+
+
