--- a/medical_systems_client/src/view/Home/index.scss
+++ b/medical_systems_client/src/view/Home/index.scss
@@ -46,3 +46,10 @@
   bottom: 0;
   pointer-events: none;
 }
+
+@media screen and (max-width: 800px) {
+  .home-body {
+    display: flex;
+    flex-direction:column;
+  }
+}
