--- a/medical_systems_client/src/view/PatientView/PatientHome/index.scss
+++ b/medical_systems_client/src/view/PatientView/PatientHome/index.scss
@@ -1,4 +1,11 @@
 .PatientHome {
+    overflow-y: scroll;  
+    position: absolute;
+    bottom: 0;
+    top:0;
+    left: 0px;
+    right: 0px;
+  
 
   &-Carousel {
     img {
