--- a/medical_systems_client/src/view/PatientView/OrderGroup/OrderDepartment/index.scss
+++ b/medical_systems_client/src/view/PatientView/OrderGroup/OrderDepartment/index.scss
@@ -23,6 +23,7 @@
       text-align: center;
       height: 30px;
       vertical-align: middle;
+      line-height: 30px;
     }
 
     &-item:hover {
